HTML/CSS of index.html done.
Responsive template of index.html.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,132 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="./css/main.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <header>
+        <a href="./index.html" class="logo">
+            <img src="./img/logo/logo.png">
+        </a>
+        <nav class="header-nav">
+            <ul>
+                <li class="hashtag header-nav__item"><a>#Portrait</a></li>
+                <li class="hashtag header-nav__item"><a>#Art</a></li>
+                <li class="hashtag header-nav__item"><a>#Fashion</a></li>
+                <li class="hashtag header-nav__item"><a>#Architecture</a></li>
+                <li class="hashtag header-nav__item"><a>#Travel</a></li>
+                <li class="hashtag header-nav__item"><a>#Sport</a></li>
+                <li class="hashtag header-nav__item"><a>#Animals</a></li>
+                <li class="hashtag header-nav__item"><a>#Events</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="index-main">
+        <h1>Nos photographes</h1>
+        <article class="photographer">
+            <a href="#">
+                <img class="photographer__profile-img" src="./img/Mimi/Portrait_Nora.jpg">
+                <h2 class="photographer__name">Mimi Keel</h2>
+            </a>
+            <p class="photographer__location">London, UK</p>
+            <p class="photographer__bio">Voir le beau dans le quotidien</p>
+            <p class="photographer__pricing"> 400€/jour</p>
+            <nav class="photographer__hashtag-list">
+                <ul>
+                    <li><a class="hashtag">#portrait</a></li>
+                    <li><a class="hashtag">#events</a></li>
+                    <li><a class="hashtag">#travel</a></li>
+                    <li><a class="hashtag">#animals</a></li>
+                </ul>
+            </nav>
+        </article>
+        <article class="photographer">
+            <a href="#">
+                <img class="photographer__profile-img" src="./img/Mimi/Portrait_Nora.jpg">
+                <h2 class="photographer__name">Name</h2>
+            </a>
+            <p class="photographer__location">Location</p>
+            <p class="photographer__bio">Biography</p>
+            <p class="photographer__pricing"> Pricing</p>
+            <nav class="photographer__hashtag-list">
+                <ul>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                </ul>
+            </nav>
+        </article>
+        <article class="photographer">
+            <a href="#">
+                <img class="photographer__profile-img" src="./img/Mimi/Portrait_Nora.jpg">
+                <h2 class="photographer__name">Name</h2>
+            </a>
+            <p class="photographer__location">Location</p>
+            <p class="photographer__bio">Biography</p>
+            <p class="photographer__pricing"> Pricing</p>
+            <nav class="photographer__hashtag-list">
+                <ul>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                </ul>
+            </nav>
+        </article>
+        <article class="photographer">
+            <a href="#">
+                <img class="photographer__profile-img" src="./img/Mimi/Portrait_Nora.jpg">
+                <h2 class="photographer__name">Name</h2>
+            </a>
+            <p class="photographer__location">Location</p>
+            <p class="photographer__bio">Biography</p>
+            <p class="photographer__pricing"> Pricing</p>
+            <nav class="photographer__hashtag-list">
+                <ul>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                </ul>
+            </nav>
+        </article>
+        <article class="photographer">
+            <a href="#">
+                <img class="photographer__profile-img" src="./img/Mimi/Portrait_Nora.jpg">
+                <h2 class="photographer__name">Name</h2>
+            </a>
+            <p class="photographer__location">Location</p>
+            <p class="photographer__bio">Biography</p>
+            <p class="photographer__pricing"> Pricing</p>
+            <nav class="photographer__hashtag-list">
+                <ul>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                </ul>
+            </nav>
+        </article>
+        <article class="photographer">
+            <a href="#">
+                <img class="photographer__profile-img" src="./img/Mimi/Portrait_Nora.jpg">
+                <h2 class="photographer__name">Name</h2>
+            </a>
+            <p class="photographer__location">Location</p>
+            <p class="photographer__bio">Biography</p>
+            <p class="photographer__pricing"> Pricing</p>
+            <nav class="photographer__hashtag-list">
+                <ul>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                    <li><a class="hashtag">#</a></li>
+                </ul>
+            </nav>
+        </article>
+    </main>
 </body>
 </html>
