dynamic template of photographer-page
photographer-page is now dynamic and responsive

media and photographers data are fetched to the page and displayed

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </a>
         <nav class="header-nav">
             <ul>
-                <li class="hashtag header-nav__item"><a>#Portrait</a></li>
-                <li class="hashtag header-nav__item"><a>#Art</a></li>
-                <li class="hashtag header-nav__item"><a>#Fashion</a></li>
-                <li class="hashtag header-nav__item"><a>#Architecture</a></li>
-                <li class="hashtag header-nav__item"><a>#Travel</a></li>
-                <li class="hashtag header-nav__item"><a>#Sport</a></li>
-                <li class="hashtag header-nav__item"><a>#Animals</a></li>
-                <li class="hashtag header-nav__item"><a>#Events</a></li>
+                <li class="hashtag header-nav__item" id="nav-portrait"><a>#Portrait</a></li>
+                <li class="hashtag header-nav__item" id="nav-art"><a>#Art</a></li>
+                <li class="hashtag header-nav__item" id="nav-fashion"><a>#Fashion</a></li>
+                <li class="hashtag header-nav__item" id="nav-architecture"><a>#Architecture</a></li>
+                <li class="hashtag header-nav__item" id="nav-travel"><a>#Travel</a></li>
+                <li class="hashtag header-nav__item" id="nav-sport"><a>#Sport</a></li>
+                <li class="hashtag header-nav__item" id="nav-animals"><a>#Animals</a></li>
+                <li class="hashtag header-nav__item" id="nav-events"><a>#Events</a></li>
             </ul>
         </nav>
     </header>
