dynamic implementation of index done
fetching and updating data on click (tags) / new class & templates / starting to use multiple javascript files to get a more logic and understandable structure

--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
         </a>
         <nav class="header-nav">
             <ul>
-                <li class="hashtag header-nav__item" id="nav-portrait"><a>#Portrait</a></li>
-                <li class="hashtag header-nav__item" id="nav-art"><a>#Art</a></li>
-                <li class="hashtag header-nav__item" id="nav-fashion"><a>#Fashion</a></li>
-                <li class="hashtag header-nav__item" id="nav-architecture"><a>#Architecture</a></li>
-                <li class="hashtag header-nav__item" id="nav-travel"><a>#Travel</a></li>
-                <li class="hashtag header-nav__item" id="nav-sport"><a>#Sport</a></li>
-                <li class="hashtag header-nav__item" id="nav-animals"><a>#Animals</a></li>
-                <li class="hashtag header-nav__item" id="nav-events"><a>#Events</a></li>
+                <li class="hashtag header-nav__item" id="portrait" onclick="getIdOnClick(this)"><a>#Portrait</a></li>
+                <li class="hashtag header-nav__item" id="art" onclick="getIdOnClick(this)"><a>#Art</a></li>
+                <li class="hashtag header-nav__item" id="fashion" onclick="getIdOnClick(this)"><a>#Fashion</a></li>
+                <li class="hashtag header-nav__item" id="architecture" onclick="getIdOnClick(this)"><a>#Architecture</a></li>
+                <li class="hashtag header-nav__item" id="travel" onclick="getIdOnClick(this)"><a>#Travel</a></li>
+                <li class="hashtag header-nav__item" id="sport" onclick="getIdOnClick(this)"><a>#Sport</a></li>
+                <li class="hashtag header-nav__item" id="animals" onclick="getIdOnClick(this)"><a>#Animals</a></li>
+                <li class="hashtag header-nav__item" id="events" onclick="getIdOnClick(this)"><a>#Events</a></li>
             </ul>
         </nav>
     </header>
     <main class="index-main" id="profileContainer">
         <h1>Nos photographes</h1>
     </main>
-    <script src="./js/script.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/Templates/PhotographerCard.js"></script>
 </body>
 </html>
