--- a/photographer-page.html
+++ b/photographer-page.html
@@ -38,5 +38,6 @@
     </main>
     
     <script src="./js/photographer-page.js"></script>
+    <script src="./js/test.js" ></script>
 </body>
 </html>
