dynamic website terminated, missing accessibility features
Added a Lightbox, a form to contact the photographer, a sticky footer with price and likes count.
A lots of adjustments and fixes.

Current known issue : accessibility is still missing

--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
             </ul>
         </nav>
     </header>
-    <main class="index-main" id="profileContainer">
+    <main class="index-main">
         <h1>Nos photographes</h1>
+        <section class="index-main" id="profileContainer">
+
+        </section>
     </main>
     <script src="./js/index.js"></script>
-    <script src="./js/Templates/PhotographerCard.js"></script>
+    <script src="./js/Templates/Photographer.js"></script>
 </body>
 </html>
